tests/ui/canonical_control_reintroduction.stderr
error[E0425]: cannot find type `CanonicalControl` in module `hibana::substrate::cap`
 --> tests/ui/canonical_control_reintroduction.rs:4:58
  |
4 |     let _ = core::mem::size_of::<hibana::substrate::cap::CanonicalControl<LoopContinueKind>>();
  |                                                          ^^^^^^^^^^^^^^^^ not found in `hibana::substrate::cap`
